# simple-edit

./: .gitignore  README.md  implementation_plan.md  package-lock.json  package.json  setup.sh  vite.config.ts
python/: main.py
scripts/: tauri.sh
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: bootstrap.rs  download.rs  media.rs  media_server.rs  mod.rs  python_server.rs  settings.rs  timeline.rs  updater.rs
src-tauri/src/engines/: mod.rs  sd.rs  whisper.rs
src-tauri/src/utils/: hardware.rs  mod.rs  paths.rs
src-tauri/src/video/: compiler.rs  metadata.rs  mod.rs  proxy.rs  thumbnails.rs  waveform.rs
src/components/: AiGenerator.tsx  ClipInspector.tsx  LandingPage.tsx  LyricVisualizer.tsx  MediaPool.tsx  ModelManager.tsx  MonitorProgram.tsx  SyrexCanvas.tsx  Timeline.tsx  ToolUpdater.tsx  VisualizerPanel.tsx
src/lib/: audioContext.ts  playheadBus.ts  useAudioPool.ts  useWebAudio.ts
src/store/: timelineStore.ts
