[package]
name = "simple-edit-app"
version = "0.1.0"
description = "simple-edit — Open-Source AI-Powered Video Editor"
authors = ["simple-edit contributors"]
edition = "2021"

[lib]
name = "simple_edit_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime — all blocking I/O goes on background threads
tokio = { version = "1", features = ["full"] }

# HTTP client for the model downloader and Civitai API resolver
reqwest = { version = "0.12", features = ["stream", "rustls-tls", "json"], default-features = false }

# System hardware info (GPU VRAM, CPU cores, RAM)
sysinfo = "0.30"

# Archive extraction for downloaded tarballs / zips
tar   = "0.4"
flate2 = "1"
zip = "2"

# Unique IDs for clips and projects
uuid = { version = "1", features = ["v4"] }

# Logging
log = "0.4"
env_logger = "0.11"
